--- a/testcolab/Vaderdata_A.ipynb
+++ b/testcolab/Vaderdata_A.ipynb
@@ -26,7 +26,7 @@
         "\n",
         "I detta uppdrag ska vi lära oss om listor, plottning och filer i Python och använda detta för att undersöka temperaturdata från SMHI.\n",
         "\n",
-        "För att kunna köra koden, klicka först på \"Open in playground\" uppe till vänster i fönstret. Klicka sedan på \"Copy to Drive\". Du får då en egen kopia av övningen så att dina resultat sparas.\n"
+        "Om du vill kan du klicka på \"Copy to Drive\". Du får då en egen kopia av övningen så att dina resultat sparas i Google Drive.\n"
       ]
     },
     {
@@ -50,7 +50,7 @@
         "### 1.1 Skapa en lista och skriv ut den\n",
         "En lista är en sekvens av värden. I koden nedan skapas en lista som sedan skrivs ut.\n",
         "\n",
-        "**Uppdrag:** Provkör koden genom att klicka på \"run\"-pilen till vänster om koden. (Klicka på koden först om du inte ser run-pilen.)"
+        "**Uppdrag:** Provkör koden genom att klicka på \"run\"-pilen till vänster om koden. (Klicka på koden först om du inte ser run-pilen.) Det kan hända att du får en varning om att Google inte skapat notebooken. Klicka då bara på \"RUN ANYWAY\"."
       ]
     },
     {
