Added linebreaks in text.

--- a/testcolab/Vaderdata_A.ipynb
+++ b/testcolab/Vaderdata_A.ipynb
@@ -50,7 +50,9 @@
         "### 1.1 Skapa en lista och skriv ut den\n",
         "En lista är en sekvens av värden. I koden nedan skapas en lista som sedan skrivs ut.\n",
         "\n",
-        "**Uppdrag:** Provkör koden genom att klicka på \"run\"-pilen till vänster om koden. (Klicka på koden först om du inte ser run-pilen.) Det kan hända att du får en varning om att Google inte skapat notebooken. Klicka då bara på \"RUN ANYWAY\"."
+        "**Uppdrag:** Provkör koden genom att klicka på \"run\"-pilen till vänster om koden.\n",
+        "(Klicka på koden först om du inte ser run-pilen.) Det kan hända att du får en varning om att Google inte skapat notebooken.\n",
+        "Klicka då bara på \"RUN ANYWAY\"."
       ]
     },
     {
