--- a/testcolab/Vaderdata_A.ipynb
+++ b/testcolab/Vaderdata_A.ipynb
@@ -144,7 +144,9 @@
         "colab_type": "text"
       },
       "source": [
-        "**Uppdrag:** Skriv kod som på liknande sätt skapar en lista `rain` med värdena för regnmängderna i tabellen. Anropa också `print` som tidigare så att du kan se att den nya listan har rätt värden. Skriv koden i rutan nedan och provkör den."
+        "**Uppdrag:** Skriv kod som på liknande sätt skapar en lista `rain` med värdena för regnmängderna i tabellen.\n",
+        "Anropa också `print` som tidigare så att du kan se att den nya listan har rätt värden.\n",
+        "Skriv koden i rutan nedan och provkör den."
       ]
     },
     {
