--- a/testcolab/Vaderdata_A.ipynb
+++ b/testcolab/Vaderdata_A.ipynb
@@ -144,9 +144,7 @@
         "colab_type": "text"
       },
       "source": [
-        "**Uppdrag:** Skriv kod som på liknande sätt skapar en lista `rain` med värdena för regnmängderna i tabellen.\n",
-        "Anropa också `print` som tidigare så att du kan se att den nya listan har rätt värden.\n",
-        "Skriv koden i rutan nedan och provkör den."
+        "**Uppdrag:** Skriv kod som på liknande sätt skapar en lista `rain` med värdena för regnmängderna i tabellen. Anropa också `print` som tidigare så att du kan se att den nya listan har rätt värden. Skriv koden i rutan nedan och provkör den."
       ]
     },
     {
@@ -199,7 +197,8 @@
       },
       "source": [
         "### 1.2 Beräkna medeltemperatur med `sum` och `len`\n",
-        "Det finns en inbyggd funktion `sum(list)` som kan summera elementen i en lista. Det finns också en inbyggd funktion `len(list)` som ger längden på listan.\n",
+        "Det finns en inbyggd funktion `sum(list)` som kan summera elementen i en lista.\n",
+        "Det finns också en inbyggd funktion `len(list)` som ger längden på listan.\n",
         "\n",
         "Följande kod skriver ut summan av temperaturerna och längden på listan."
       ]
